test/fails/bad_types/bad_cmult.lgl
void main() {
    print 5 *. 5;
}